Fixed Alignment issues on the main heroes pictures.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -48,11 +48,7 @@ background-color: pink;
 }
 
 .portrait_heroes {
-  display: inline-block;
-
-  max-width: 0 auto;
-  height: auto;
-  margin: 0 auto;
+  display: block;
 
   text-align: center;
 }
